--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^4.1.2",
     "core-js": "^2.4.1",
     "firebase": "^5.9.4",
+    "ng-timespan": "^1.3.2",
     "node-sass": "^4.11.0",
     "npm": "^6.9.0",
     "protractor": "^5.4.2",
