--- a/angular.json
+++ b/angular.json
@@ -25,7 +25,11 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/jquery/dist/jquery.min.js"
+
+
+            ]
           },
           "configurations": {
             "production": {
