--- a/package.json
+++ b/package.json
@@ -9,38 +9,51 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "7.2.13",
-    "@angular/cdk": "7.3.7",
-    "@angular/common": "7.2.13",
-    "@angular/compiler": "7.2.13",
-    "@angular/core": "7.2.13",
-    "@angular/fire": "^5.1.2",
-    "@angular/forms": "7.2.13",
-    "@angular/http": "7.2.13",
-    "@angular/material": "^7.3.7",
-    "@angular/platform-browser": "7.2.13",
-    "@angular/platform-browser-dynamic": "7.2.13",
-    "@angular/router": "7.2.13",
+    "@angular/animations": "8.2.9",
+    "@angular/cdk": "8.2.2",
+    "@angular/common": "8.2.9",
+    "@angular/compiler": "8.2.9",
+    "@angular/core": "^8.2.9",
+    "@angular/fire": "^5.2.1",
+    "@angular/forms": "8.2.9",
+    "@angular/http": "7.2.15",
+    "@angular/material": "^8.2.2",
+    "@angular/platform-browser": "8.2.9",
+    "@angular/platform-browser-dynamic": "8.2.9",
+    "@angular/router": "8.2.9",
+    "@ng-bootstrap/ng-bootstrap": "^5.1.1",
+    "@webcomponents/webcomponentsjs": "^2.3.0",
     "bootstrap": "^4.1.2",
-    "core-js": "^2.4.1",
-    "firebase": "^5.9.4",
+    "chart.js": "^2.8.0",
+    "core-js": "^3.2.1",
+    "export-to-csv": "^0.2.1",
+    "firebase": "^7.1.0",
+    "html2canvas": "^1.0.0-rc.5",
+    "jquery": "^3.4.1",
+    "jspdf": "^1.5.3",
     "ng-timespan": "^1.3.2",
-    "node-sass": "^4.11.0",
-    "npm": "^6.9.0",
+    "ng2-charts": "^2.3.0",
+    "ngx-captcha": "^7.0.0",
+    "ngx-export-as": "^1.3.0",
+    "ngx-hm-carousel": "^1.7.2",
+    "ngx-moment": "^3.4.0",
+    "node-sass": "^4.12.0",
+    "npm": "^6.11.3",
+    "pdfmake": "^0.1.60",
     "protractor": "^5.4.2",
-    "rxjs": "^6.4.0",
-    "rxjs-compat": "^6.3.3",
-    "zone.js": "^0.8.29"
+    "rxjs": "^6.5.3",
+    "rxjs-compat": "^6.5.3",
+    "zone.js": "^0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.13.0",
-    "@angular/cli": "7.3.8",
-    "@angular/compiler-cli": "7.2.13",
-    "@angular/language-service": "7.2.13",
-    "@types/node": "~6.0.60",
-    "codelyzer": "~3.2.0",
-    "ts-node": "~3.2.0",
-    "tslint": "~5.7.0",
-    "typescript": "3.2.4"
+    "@angular-devkit/build-angular": "~0.803.8",
+    "@angular/cli": "8.3.8",
+    "@angular/compiler-cli": "8.2.9",
+    "@angular/language-service": "8.2.9",
+    "@types/node": "~12.7.11",
+    "codelyzer": "~5.1.2",
+    "ts-node": "~8.4.1",
+    "tslint": "~5.20.0",
+    "typescript": "^3.4.5"
   }
 }
