--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "ngx-export-as": "^1.3.0",
     "ngx-hm-carousel": "^1.7.2",
     "ngx-moment": "^3.4.0",
+    "ngx-spinner": "^8.1.0",
     "node-sass": "^4.12.0",
     "npm": "^6.11.3",
     "pdfmake": "^0.1.60",
