--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/forms": "8.2.9",
     "@angular/http": "7.2.15",
     "@angular/material": "^8.2.2",
+    "@angular/material-moment-adapter": "^8.2.3",
     "@angular/platform-browser": "8.2.9",
     "@angular/platform-browser-dynamic": "8.2.9",
     "@angular/router": "8.2.9",
